# datebooks

./: birdflu.ipynb  congress.py  foreignLobbying.ipynb  hello.py  purine.ipynb  purine.py  purineapp.py  pyproject.toml
data/: PURINE2023.XLSX  birdflu.csv  purine.csv
