[project]
name = "datebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pycountry>=24.6.1",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "streamlit>=1.43.1",
    "us>=3.2.0",
    "watchdog>=6.0.0",
]
